--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorSecondary">#1ED761</color>
+    <color name="colorSecondaryDark">#000000</color>
+    <color name="colorSecondaryAccent">#FFFFFF</color>
 </resources>
