--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorSecondary">#32B137</color>
     <color name="colorSecondaryDark">#000000</color>
     <color name="colorSecondaryAccent">#FFFFFF</color>
+    <color name="colorSecondaryAccentGray">#d3d3d3</color>
 </resources>
