--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorSecondaryAccent</item>
     </style>
 
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="android:textColor">@color/colorSecondaryAccent</item>
+        <item name="android:editTextColor">@color/colorSecondaryAccent</item>
+        <item name="android:textColorHint">@color/colorSecondaryAccentGray</item>
+    </style>
+
 </resources>
